--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "main": "dist/chatgpt.js",
   "scripts": {
     "build": "npx tsc -p tsconfig.json",
-    "test": "jest --foceExit",
+    "test": "jest --forceExit",
     "test:watch": "jest --watch",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "eslint \"src/**/*.ts\" --fix",
